[project]
name = "ml_networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oakwood-fujiken", email = "oakwood.n14.4sp@keio.jp" },
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
requires-python = ">=3.10"
dependencies = [
    "blosc2>=2.4.0",
    "einops>=0.8.1",
    "kornia>=0.7.3",
    "numpy>=2.1",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.4.0",
    "pytorch-optimizer>=3.4.2",
    "schedulefree>=1.4",
    "torch>=2.5",
    "torchgeometry>=0.1.2",
    "torchvision>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.33.0",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.10",
]

[tool.mypy]
python_version = "3.10"
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",    # copyright はいらない
    "FBT",    # 必要
    "PLR",    # too-many はしょうがない
    "S101",   # assetionは必要
    "N812",   # torch.nn.functional as F のため
    "D102",   # 面倒なので
    "ANN401", # しょうがない
    "D100",   # そのうち修正する
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"callbacks.py" = ["ARG002"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'
