[project]
name = "ml_networks"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oakwood-fujiken", email = "oakwood.n14.4sp@keio.jp" },
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "kornia>=0.7.3",
    "natsort>=8.4.0",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.4.0",
    "pytorch-optimizer>=3.4.2",
    "schedulefree>=1.4",
    "torch>=2.0",
    "torchgeometry>=0.1.2",
    "torchvision>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "codespell>=2.4.1",
    "ipython<=8.33.0",
    "mypy>=1.15.0",
    "pip>=25.3",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov<=6.0.0",
    "ruff>=0.9.10",
    "types-pyserial>=3.5.0.20241221",
]
jax = [
    "distrax>=0.1.5",
    "einops>=0.8.1",
    "flax>=0.12.0",
    "jax>=0.4.30",
    "optax>=0.2.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.26.1",
]

[tool.mypy]
python_version = "3.10"
# plugins = "numpy.typing.mypy_plugin"  # numpy not installed in CI
exclude = [
    "src/ml_networks/jax/",  # Exclude JAX modules as they require Python 3.11+
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",    # copyright はいらない
    "FBT",    # 必要
    "PLR",    # too-many はしょうがない
    "S101",   # assetionは必要
    "N812",   # torch.nn.functional as F のため
    "D102",   # 面倒なので
    "ANN001", # 一部の引数の型アノテーションは省略（idx, nameなど）
    "ANN401", # しょうがない
    "TC001",  # 実行時に使用されるためTYPE_CHECKINGブロックに移動できない
    "C901",   # 複雑度が高いが、リファクタリングは後回し
    "NPY002", # numpyのrandom関数は互換性のため残す
    "PTH103", # os.makedirsは既存コードとの互換性のため残す
    "PTH123", # open()は既存コードとの互換性のため残す
    "PTH207", # globは既存コードとの互換性のため残す
    "A001",   # max/minなどの変数名は文脈上問題ない
    "A002",   # inputなどの変数名は文脈上問題ない
    "T201",   # printはデバッグ用
    "PLW0127", # 自己代入は意図的
    "B008",   # 関数呼び出しのデフォルト引数は意図的
    "B028",   # stacklevelは省略
    "D101",   # 一部のクラスのdocstringは省略
    "D105",   # マジックメソッドのdocstringは省略
    "D205",   # docstringの空行は柔軟に
    "D401",   # docstringの命令形は柔軟に
    "FA100",  # from __future__ import annotationsは既に追加済み
    "ARG001", # 未使用の引数は意図的
    "ARG002", # 未使用の引数は意図的
    "DOC201", # 戻り値のdocstringは柔軟に
    "DOC202", # 戻り値がない関数のReturnsセクションは柔軟に
    "DOC501", # 例外のdocstringは柔軟に
    "COM812", # フォーマッターとの競合を避けるため
    "PLC0415", # importの位置は柔軟に（パフォーマンスのため）
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"callbacks.py" = ["ARG002"]
"unet.py" = ["TC001"]  # ConvConfig, MLPConfig, UNetConfig are used at runtime
"utils.py" = ["TC002"]  # numpy is used at runtime

[tool.ruff.format]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'

[tool.uv.sources]
ml-networks = { workspace = true }

[dependency-groups]
dev = [
    "ml-networks[docs]",
]
